src/test/deca/context/valid/read_calls.deca

// Description :
// Types de readInt/readFloat : readInt()->int, readFloat()->float 
//
// Resultats :
// ok
//

{
  int x = readInt();
  float f = readInt();
  float g = readFloat();
  println(x, f, g);
}