src/test/deca/context/invalid/int_from_bool.deca
// Description :
// Affectation d'un booleen a une variable entiere

// Resultats :
// Erreur contextuelle (types incompatibles)


{
  int x;
  x = true;
}
